# cordic

./: Cargo.toml
cordic/: Cargo.toml
cordic/src/: cordic.rs  cordic_number.rs  lib.rs
fixed-trig/: Cargo.toml
fixed-trig/src/: cordic.rs  cordic_number.rs  lib.rs  lookup.rs
fixed-trig/src/tables/: asin.table  cordic_atan.table  cordic_exp_minus_one.table  sin.table
table-builder/: Cargo.toml
table-builder/src/: main.rs
