[package]
name = "cordic"
version = "0.1.1"
description = "Special functions for fixed-point numbers using the CORDIC method."
authors = ["crunchyfrog <alex@crunchy.com>", "sebcrozet <developer@crozet.re>"]
license = "BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "0.5"
