[package]
name = "cordic"
version = "0.1.4"
description = "Special functions for fixed-point numbers using the CORDIC method."
authors = ["sebcrozet <developer@crozet.re>"]
repository = "https://github.com/sebcrozet/cordic"
documentation = "https://docs.rs/cordic"
license = "BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1"
